--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,10 @@ classifiers = [
     "Operating System :: Microsoft :: Windows :: Windows 10",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Topic :: Scientific/Engineering",
     "Topic :: Software Development :: Libraries",
@@ -56,6 +60,7 @@ dependencies = [
 ]
 [project.urls]
 "Documentation" = "https://github.com/cloudmesh/cloudmesh-common"
+"Changelog" = "https://github.com/cloudmesh/cloudmesh-common/CHANGELOG.md"
 
 [tool.setuptools.packages.find]
 where = ["src/"]
