--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ classifiers = [
 dependencies = [
     "toml",
     "cloudmesh-cmd5",
+    "cloudmesh-configuration",
     "pygments",
     "PyGithub"
 ]
