--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,5 +69,5 @@ Changelog = "https://github.com/cloudmesh/cloudmesh-git/blob/main/CHANGELOG.md"
 
 
 [tool.setuptools.packages.find]
-where = ["src/"]
+where = ["src"]
 include = ["cloudmesh.git", "cloudmesh.git.*"]
